--- a/accessibilite/css/style.css
+++ b/accessibilite/css/style.css
@@ -3,6 +3,16 @@ body{
     margin-top : 5vh;
 }
 
+#title {
+    position: fixed;
+    top: auto;
+    left:5vw;
+    margin: 1%;
+    padding: 1%;
+    font-size:2.5em;
+}
+
+
 ul {
     position: fixed;
     top: 0;
@@ -14,7 +24,7 @@ ul {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: blue;
 }
   
 li {
@@ -32,4 +42,8 @@ li a {
 /* Change the link color to #111 (black) on hover */
 li a:hover {
     background-color: #111;
+}
+
+#about{
+    float:right;
 }
