--- a/mr4a11y/main.css
+++ b/mr4a11y/main.css
@@ -26,7 +26,7 @@ body {
   color: #007bff !important;
 }
 .navbar {
-  background: #fff;
+  background: #f4f4f4;
 }
 .navbar-toggler {
   border: none !important;
