--- a/mr4a11y/main_fr.css
+++ b/mr4a11y/main_fr.css
@@ -48,15 +48,16 @@ body {
 /*** Form**/
 #form {
   display: inline-block;
+  position : relative;
   padding: 20px;
   border-radius: 15px;
   box-shadow: rgb(219, 218, 218) 5px 20px 20px;
-
   border: 3px rgb(163, 162, 162);
   margin-left: 25%;
   margin-right: 25%;
   margin-top: 1%;
   width: 50%;
+  bottom : 8vh;
 }
 textarea {
   width: 100%;
