--- a/accessibilite/style.css
+++ b/accessibilite/style.css
@@ -57,6 +57,10 @@ body {
 }
 
 /*** Form**/
+#envoyer {
+  background-color : rgb(9, 4, 77);
+}
+
 #form {
   display: inline-block;
   position : relative;
